23.0
-----
* [**] [internal] Upgrade React Native to 0.71.11 [#20956]

22.9
-----
* [*] [internal] Fix multiple memory leaks after logging in and logging out. [#21047, #21092]
* [**] Block editor: Move undo/redo buttons to the navigation bar. [#20930]
* [*] Fixed an issue that caused the UI to be briefly unresponsive in certain case when opening the app. [#21065]
* [**] Blogging Prompts: Fixed a crash in Reader after tapping on a blogging prompt multiple times. [#21112]
* [*] [internal] Update calls to use UserDefaults singleton. [#21088]
* [*] Fix memory leaks in setting up Jetpack connection. [#21052]
* [*] Fix a memory leak caused by the theme customization web view. [#21051]
* [**] [internal] Updated the code that enables Gutenberg editor in all blogs when the user is in the Gutenberg rollout group. [#21146]
* [**] [internal] Fix a few potential Core Data issues in Blogging Prompts & Reminders. [#21016]
* [*] [Jetpack-only] Made performance improvements for Posting Activity stats. [#21136]
* [*] Fixed a crash that could occur when following sites in Reader. [#21140]
* [*] [Jetpack-only] Fixed a crash that could occur when the user deletes the WordPress app upon a successful migration. [#21167]
* [*] Fixed a crash that occurs in Weekly Roundup Background task due to a Core Data Concurrency violation. [#21076]
* [***] Block editor: Editor UX improvements with new icons, colors and additional design enhancements. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5985]

22.8
-----
* [*] Blogging Reminders: Disabled prompt for self-hosted sites not connected to Jetpack. [#20970]
* [**] [internal] Do not save synced blogs if the app has signed out. [#20959]
* [**] [internal] Make sure synced posts are saved before calling completion block. [#20960]
* [**] [internal] Fix observing Quick Start notifications. [#20997]
* [**] [internal] Fixed an issue that was causing a memory leak in the domain selection flow. [#20813]